Align anonymous users correctly in messages.
The empty thumbnail is required for most of the spacing. A small
change is made to add the 4px margin to a span, rather than the link,
since anonymous users won't be linked.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -135,7 +135,7 @@ article.message {
   min-height: 60px;
   .details {
     padding: 4px;
-    .author a {
+    .author .name {
       margin-left: 4px;
     }
     .thumbnail {
@@ -275,4 +275,3 @@ body.library-notes {
   }
 
 }
-
